# LocalLLMManager

./: .gitignore  GEMINI.md  README.md  app.py  pyproject.toml  requirements.txt
LocalLLMManager/: app.py  gguf-vram-estimator.py  ggufvramestimator.py
LocalLLMManager/static/css/: style.css
LocalLLMManager/static/js/: theme.js
LocalLLMManager/templates/: browse.html  index.html  list_files.html  manage.html  nodes.html  search.html  status.html
templates/: browse.html  index.html  list_files.html  search.html  status.html
